6 February 2014: Wouter
	- sldns has type HIP.

5 February 2014: Wouter
	- Fix sldns parse tests on osx.

3 February 2014: Wouter
	- Detect libevent2 install automatically by configure.
	- Fixup link with lib/event2 subdir.
	- Fix parse in sldns of quoted parenthesized text strings.

31 January 2014: Wouter
	- unit test for ldns wire to str and back with zones, root, nlnetlabs
	  and types.sidnlabs.
	- Fix for hex to string in unknown, atma and nsap.
	- fixup nss compile (no ldns in it).
	- fixup warning in unitldns
	- fixup WKS and rdata type service to print unsigned because strings
	  are not portable; they cannot be read (for sure) on other computers.
	- fixup type EUI48 and EUI64, type APL and type IPSECKEY in string
	  parse sldns.

30 January 2014: Wouter
	- delay-close does not act if there are udp-wait queries, so that
	  it does not make a socketdrain DoS easier.

28 January 2014: Wouter
	- iana portlist updated.
	- iana portlist test updated so it does not touch the source
	  if there are no changes.
	- delay-close: msec option that delays closing ports for which
	  the UDP reply has timed out.  Keeps the port open, only accepts
	  the correct reply.  This correct reply is not used, but the port
	  is open so that no port-denied ICMPs are generated.

27 January 2014: Wouter
	- reuseport is attempted, then fallback to without on failure.

24 January 2014: Wouter
	- Change unbound-event.h to use void* buffer, length idiom.
	- iana portlist updated.
	- unbound-event.h is installed if you configure --enable-event-api.
	- speed up unbound (reports say it could be up to 10%), by reducing
	  lock contention on localzones.lock.  It is changed to an rwlock.
	- so-reuseport: yesno option to distribute queries evenly over
	  threads on Linux (Thanks Robert Edmonds).
	- made lint clean.

21 January 2014: Wouter
	- Fix #547: no trustanchor written if filesystem full, fclose checked.

17 January 2014: Wouter
	- Fix isprint() portability in sldns, uses unsigned int.